--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -13,7 +13,7 @@
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- App title has to have less than 50 characters. If you cannot squeeze it, just remove a part of it -->
-    <string name="app_title">Eenvoudig Tekenen - Snel &amp; gemakkelijk schetsen</string>
+    <string name="app_title">Eenvoudig Tekenen Pro- Snel &amp; gemakkelijk schetsen</string>
     <!-- Short description has to have less than 80 chars -->
     <string name="app_short_description">Pen en papier voor snelle schetsen, zonder advertenties, zonder internettoegang</string>
     <string name="app_long_description">
