--- a/app/src/main/res/values-sk/strings.xml
+++ b/app/src/main/res/values-sk/strings.xml
@@ -17,15 +17,17 @@
     <!-- Short description has to have less than 80 chars -->
     <string name="app_short_description">Pero a papier pre vaše jednoduché nákresy bez reklám a prístupu na internet.</string>
     <string name="app_long_description">
-        Want to draw something creative but you have no paper? This app will suit you perfectly. Just pick a color and draw, it is as easy as that. You can either save the drawing in a file, print it or share it directly through email or social networks so that your friends can have some fun with it too.
+        Chcete nakresliť niečo kreatívne, ale nemáte papier? Táto apka vám príde vhod. Proste si zvoľte farbu a kreslite, je to tak jednoduché. Nákres si viete buď uložiť do súboru, vytlačiť, alebo priamo zdieľať cez email, alebo sociálnu sieť.
 
-        This hugely popular app for quick sketches provides many useful functions like Undo/Redo, changing the background color, or using an image as the background. You can optionally make the app prevent the device from falling asleep too. You can also change the brush size, or use an eraser, if you messed something up. It supports inserting colors either by selecting it on a huge palette, or by entering the colors hex code.
+        Táto populárna apka na rýchle kresby má množstvo užitočných funkcií ako Vrátenie späť/vpred, zmenu farby pozadia, alebo použitie obrázka ako pozadie. Viete si zapnúť aj predídenie vypínania displeja počas jej používania. Taktiež viete zmeniť veľkosť štetca, alebo použiť gumu, ak vám niečo nevyšlo.
 
-        The app supports many different formats like PNG, JPG or SVG vectors.
+        Podporuje vyberanie farieb buď priamou voľbou, alebo zadávaním HEX kódu.
 
-        You can either draw something new from scratch, or open some file and just play around with it. It is perfectly usable either by you, or by a family with children to play some games. After all, everyone has a piece of artist in himself.
+        Kreslenie podporuje veľa rôznych formátov ako PNG, JPG alebo SVG vektory.
 
-        You will not find any fancy or advanced tools, brushes, fonts, filters here, it is supposed to be used to have some fun with.
+        Viete buď nakresliť niečo od nuly, alebo otvoriť súbor a proste sa s ním pohrať. Dá sa jednoducho použiť buď vami, alebo vašou rodinou s deťmi. Každý má totižto v sebe kus umelca.
+
+        Nenájdete tu žiadne extra pokročilé funkcie, štetce, písmo, filtre atď, ide iba o kreslenie jednoduchých vecí.
 
         Táto apka je založená na Material dizajne a má prednastavenú tmavú tému, poskytuje výbornú používateľskú skúsenosť pre ľahké používanie. Chýbajúci prístup k internetu garantuje lepšie súkromie, bezpečnosť a stabilitu ako ostatné apky.
 
