--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -13,25 +13,25 @@
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- App title has to have less than 50 characters. If you cannot squeeze it, just remove a part of it -->
-    <string name="app_title">Simple Draw Pro - App for quick &amp; easy sketches</string>
+    <string name="app_title">简易绘图 Pro - 快速简单 &amp; 的画图应用</string>
     <!-- Short description has to have less than 80 chars -->
-    <string name="app_short_description">Pen &amp; paper for your creative quick easy drawings with no ads or internet access</string>
+    <string name="app_short_description">为您快速的创意绘图准备的笔 &amp; 纸，没有广告或者互联网访问</string>
     <string name="app_long_description">
-        Want to draw something creative but you have no paper? This app will suit you perfectly. Just pick a color and draw, it is as easy as that. You can either save the drawing in a file, print it or share it directly through email or social networks so that your friends can have some fun with it too.
+        想要挥洒创意却没有纸？这个应用将十分适合您。只要选择一个颜色和绘图工具，就这么简单。您可以把绘图保存至文件，打印或者直接通过邮件或者社交网络分享，这样您的朋友也可以获得一番乐趣。
 
-        This hugely popular app for quick sketches provides many useful functions like Undo/Redo, changing the background color, or using an image as the background. You can optionally make the app prevent the device from falling asleep too. You can also change the brush size, or use an eraser, if you messed something up. It supports inserting colors either by selecting it on a huge palette, or by entering the colors hex code.
+        这个超级流行的快速涂鸦工具提供许多有用的功能诸如撤销/重做，改变背景颜色，或者使用图片作为背景。您也可以选择让该应用阻止设备进入休眠。您可以改变笔刷尺寸，或者当搞砸了的时候使用橡皮。它既支持使用巨大的调色板选择颜色，或者输入颜色的十六进制代码。
 
-        The app supports many different formats like PNG, JPG or SVG vectors.
+        这个应用支持多种不同格式，如 PNG、JPG 或 SVG 矢量图。
 
-        You can either draw something new from scratch, or open some file and just play around with it. It is perfectly usable either by you, or by a family with children to play some games. After all, everyone has a piece of artist in himself.
+        您既可以从头开始花一些东西，也可以打开一些文件然后在上面涂鸦。这也十分适合您或者您的家人跟孩子玩一些游戏。总而言之，每个人心中都有一个艺术家。
 
-        You will not find any fancy or advanced tools, brushes, fonts, filters here, it is supposed to be used to have some fun with.
+        您在这里找不到酷炫或者高级的工具，笔刷、字体、滤镜之类的。这个工具一直以来的意图是为了好玩有趣。
 
-        It comes with material design and dark theme by default, provides great user experience for easy usage. The lack of internet access gives you more privacy, security and stability than other apps.
+        它遵循质感设计且默认应用黑暗模式，提供便于使用的极佳的用户体验。相对于其他应用，不包含互联网访问给予您更佳的隐私、保密性和稳定性。
         
         不包含广告及非必要权限，完全开源，并提供自定义颜色。
         
-        <b>Check out the full suite of Simple Tools here:</b>
+        <b>于此查看简易工具系列全套:</b>
         https://www.simplemobiletools.com
 
         <b>Facebook:</b>
