adding a new string for zooming and moving canvas setting

--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -8,6 +8,7 @@
     <!-- Settings -->
     <string name="show_brush_size">إظهار أداة حجم الفرشاة</string>
     <string name="allow_zooming_canvas">السماح بتكبير لوحة الرسم باستخدام الإيماءات</string>
+    <string name="allow_zooming_moving_canvas">Allow zooming and moving the canvas with gestures</string>
     <string name="clear">مسح</string>
     <string name="change_background_color">تغيير لون الخلفية</string>
 
