--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -8,6 +8,7 @@
     <!-- Settings -->
     <string name="show_brush_size">Zeige Pinselgröße</string>
     <string name="allow_zooming_canvas">Zoomen in der Zeichenfläche mit Gesten ermöglichen</string>
+    <string name="allow_zooming_moving_canvas">Allow zooming and moving the canvas with gestures</string>
     <string name="clear">Löschen</string>
     <string name="change_background_color">Ändere Hintergrundfarbe</string>
 
