--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -8,6 +8,7 @@
     <!-- Settings -->
     <string name="show_brush_size">Mostrar tamaño de la herramienta pincel</string>
     <string name="allow_zooming_canvas">Permite hacer zoom en el lienzo con gestos</string>
+    <string name="allow_zooming_moving_canvas">Allow zooming and moving the canvas with gestures</string>
     <string name="clear">Limpiar</string>
     <string name="change_background_color">Cambiar color de fondo</string>
 
