--- a/app/src/main/res/values-az/strings.xml
+++ b/app/src/main/res/values-az/strings.xml
@@ -8,6 +8,7 @@
     <!-- Settings -->
     <string name="show_brush_size">Fırça ölçüsü alətini göstər</string>
     <string name="allow_zooming_canvas">Allow zooming the canvas with gestures</string>
+    <string name="allow_zooming_moving_canvas">Allow zooming and moving the canvas with gestures</string>
     <string name="clear">Təmizlə</string>
     <string name="change_background_color">Arxaplan rəngini dəyiş</string>
 
