--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -8,6 +8,7 @@
     <!-- Settings -->
     <string name="show_brush_size">Näytä siveltimen koon työkalu</string>
     <string name="allow_zooming_canvas">Salli Salli kankaan zoomaaminen eleillä</string>
+    <string name="allow_zooming_moving_canvas">Allow zooming and moving the canvas with gestures</string>
     <string name="clear">Tyhjennä</string>
     <string name="change_background_color">Vaihda taustaväriä</string>
 
