--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -8,6 +8,7 @@
     <!-- Settings -->
     <string name="show_brush_size">Показувати інструмент зміни пензля</string>
     <string name="allow_zooming_canvas">Дозволяти масштабування тла жестами</string>
+    <string name="allow_zooming_moving_canvas">Allow zooming and moving the canvas with gestures</string>
     <string name="clear">Очистити</string>
     <string name="change_background_color">Змінити колір тла</string>
 
