--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -8,7 +8,7 @@
     <!-- Settings -->
     <string name="show_brush_size">Показать размер кисти</string>
     <string name="allow_zooming_canvas">Разрешить масштабирование холста жестами</string>
-    <string name="allow_zooming_moving_canvas">Дозволити масштабування та переміщення полотна за допомогою жестів</string>
+    <string name="allow_zooming_moving_canvas">Разрешить масштабирование и перемещение холста жестами</string>
     <string name="clear">Очистить</string>
     <string name="change_background_color">Изменить цвет фона</string>
 
