--- a/app/src/main/res/values-cy/strings.xml
+++ b/app/src/main/res/values-cy/strings.xml
@@ -3,6 +3,7 @@
     <string name="app_launcher_name">Llunio</string>
     <string name="open_file">Agor ffeil</string>
     <string name="eraser">Rwbiwr</string>
+    <string name="eyedropper">Eyedropper</string>
     <string name="failed_to_load_image">Methwyd â llwytho\'r ddelwedd %s</string>
 
     <!-- Settings -->
