--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -3,6 +3,7 @@
     <string name="app_launcher_name">الرسام</string>
     <string name="open_file">فتح ملف</string>
     <string name="eraser">الممحاة</string>
+    <string name="eyedropper">Eyedropper</string>
     <string name="failed_to_load_image">فشل تحميل الصورة %s</string>
 
     <!-- Settings -->
