--- a/app/src/main/res/values-az/strings.xml
+++ b/app/src/main/res/values-az/strings.xml
@@ -3,6 +3,7 @@
     <string name="app_launcher_name">Rəsm</string>
     <string name="open_file">Fayl aç</string>
     <string name="eraser">Pozan</string>
+    <string name="eyedropper">Eyedropper</string>
     <string name="failed_to_load_image">%s şəklini silmək olmur</string>
 
     <!-- Settings -->
