--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -3,6 +3,7 @@
     <string name="app_launcher_name">Piirrä</string>
     <string name="open_file">Avaa tiedosto</string>
     <string name="eraser">Pyyhin</string>
+    <string name="eyedropper">Eyedropper</string>
     <string name="failed_to_load_image">Kuvan %s lataaminen epäonnistui</string>
 
     <!-- Settings -->
