--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -3,6 +3,7 @@
     <string name="app_launcher_name">ドロー</string>
     <string name="open_file">ファイルを開く</string>
     <string name="eraser">消しゴム</string>
+    <string name="eyedropper">Eyedropper</string>
     <string name="failed_to_load_image">画像 %s を読み込めませんでした</string>
 
     <!-- Settings -->
