--- a/app/src/main/res/values-nb/strings.xml
+++ b/app/src/main/res/values-nb/strings.xml
@@ -3,6 +3,7 @@
     <string name="app_launcher_name">Tegneblokk</string>
     <string name="open_file">Åpne fil</string>
     <string name="eraser">Viskelær</string>
+    <string name="eyedropper">Eyedropper</string>
     <string name="failed_to_load_image">Kunne ikke laste inn bilde %s</string>
 
     <!-- Settings -->
