--- a/app/src/main/res/values-sk/strings.xml
+++ b/app/src/main/res/values-sk/strings.xml
@@ -3,6 +3,7 @@
     <string name="app_launcher_name">Kreslenie</string>
     <string name="open_file">Otvoriť súbor</string>
     <string name="eraser">Guma</string>
+    <string name="eyedropper">Kvapkadlo</string>
     <string name="failed_to_load_image">Nepodarilo sa načítať súbor %s</string>
 
     <!-- Settings -->
