--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="app_launcher_name">Draw</string>
     <string name="open_file">Open file</string>
     <string name="eraser">Eraser</string>
+    <string name="eyedropper">Eyedropper</string>
     <string name="failed_to_load_image">Failed to load image %s</string>
 
     <!-- Settings -->
